test/src/e2e_vm_tests/test_programs/should_pass/dump_impls_common/src/lib.sw
library;

pub struct MyStruct { }

pub enum MyEnum {
    A: ()
}

trait MyTrait {}

impl MyTrait for MyStruct {}
impl MyTrait for MyEnum {}
