test/src/e2e_vm_tests/test_programs/should_fail/trait_impl_pub_fn/src/main.sw
contract;

trait A {
    fn foo();
}

struct S {}

impl A for S {
     pub fn foo() {

     }
}
